understanding combination sum